fix: correct position offset of CollapsedDrawer in Safari

--- a/src/components/common/Questionnaire/CollapsedDrawer/CollapsedDrawer.module.css
+++ b/src/components/common/Questionnaire/CollapsedDrawer/CollapsedDrawer.module.css
@@ -3,9 +3,14 @@
 .container {
   position: fixed;
   top: 50%;
-  right: 0;
   transform: translateY(-50%);
   z-index: 9;
+  display: none;
+}
+
+.applyStyle {
+  right: 0;
+  display: flex;
 }
 
 .label {
